<resources>
    <string name="app_name">MWeather</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MWeather</string>
    <string name="nav_header_subtitle">MWeather.info@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_info">Info</string>

    <string name="menu_home">Home</string>
    <string name="menu_favorite">History</string>
    <string name="menu_settings">Settings</string>

    <string name="home_second">Home Second</string>

    <string name="favorite_text">Здесь будет избранное</string>
    <string name="settings_text">Здесь будут настройки</string>
    <string name="about_text" > Приложение создано \n
                                в рамках обучения на\n
                                факультете Android разработки\n
                                в GeekBrains University</string>

    <string name="localityChoice">Current location</string>
    <string name="oneDay">1 Day</string>
    <string name="threeDays">3 Days</string>
    <string name="week">Week</string>
    <string name="hintLocation">Choose location</string>
    <string name="nightModeSwitch">Night Mode</string>
    <string name="cBoxPressure">Atmosphere pressure</string>
    <string name="cBoxWindSpeed">Wind Speed</string>
    <string name="settingsBtnDescription">Settings</string>
    <string name="infoLink"><a>Additional Information</a></string>
    <string name="link">https://en.wikipedia.org/wiki/</string>
    <string name="date">Date</string>
    <string name="conditions">Conditions</string>
    <string name="dayHigh">Day High</string>
    <string name="dayLow">Day Low</string>
    <string name="humidity">Humidity \n%</string>
    <string name="windSpeedSnackON">Show wind speed</string>
    <string name="pressureSnackON">Show pressure</string>
    <string name="windSpeedSnackOFF">Wind speed display off</string>
    <string name="pressureSnackOFF">Pressure display off</string>
    <string name="cBoxFahrenheit">Display Fahrenheit</string>

    <string name="info_exclamation">About app</string>
    <string name="info_button">Close</string>
    <string name="error_exclamation">Error code</string>
    <string name="err_button">OK</string>
    <string name="internet_error">Internet Error</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_add">Add to favorite</string>
    <string name="menu_clear">Clear history</string>
</resources>
