<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="0"
        android:background="@color/backGr"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/localityChoiceLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/localityChoice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/backGr"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:textColorHint="@color/hintColor"
                android:textSize="@dimen/locality" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/mainConditions"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:gravity="center_horizontal|center_vertical"/>

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:textColor="@color/textColor"
            android:textSize="@dimen/temperature" />

        <TextView
            android:id="@+id/measure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:textColor="@color/textColor"
            android:textSize="@dimen/measure" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/backGr"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backGr"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/itemDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/date"
                android:textColor="@color/textColor" />

            <TextView
                android:id="@+id/itemConditions"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/conditions"
                android:textColor="@color/textColor" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/backGr"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dayHigh"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/dayHigh"
                    android:textColor="@color/textColor" />

                <TextView
                    android:id="@+id/dayHighMeasure"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textColor="@color/textColor" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/backGr"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/dayLow"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="@string/dayLow"
                    android:textColor="@color/textColor" />

                <TextView
                    android:id="@+id/dayLowMeasure"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:textColor="@color/textColor" />

            </LinearLayout>

            <TextView
                android:id="@+id/humidity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/humidity"
                android:textColor="@color/textColor" />
        </LinearLayout>


    </LinearLayout>

    <include
        layout="@layout/content_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/backGr" />

    <com.google.android.material.circularreveal.CircularRevealLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:background="@color/backGr"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/oneDayBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="2"
            android:text="@string/oneDay"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/threeDaysBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="2"
            android:text="@string/threeDays"
            app:cornerRadius="20dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/weekBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="2"
            android:text="@string/week"
            app:cornerRadius="20dp" />

    </com.google.android.material.circularreveal.CircularRevealLinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>